# Python-Guide-CN

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Contributing.md  Makefile  Pipfile  README.md  Readme.rst  diff.txt  make.bat  makehtml.bat  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
diff/: last_commit
docs/: 404.rst  Makefile  conf.py  contents.rst.inc  index.rst
docs/_extra/: ads.txt
docs/_static/: github-star.css  github-star.js
docs/_templates/: github_star.html  hacks.html  sidebarintro.html  sidebarlogo.html
docs/dev/: env.rst  pip-virtualenv.rst  virtualenvs.rst
docs/intro/: community.rst  documentation.rst  duction.rst  learning.rst  news.rst
docs/notes/: contribute.rst  license.rst  styleguide.rst
docs/scenarios/: admin.rst  ci.rst  cli.rst  clibs.rst  client.rst  crypto.rst  db.rst  gui.rst  imaging.rst  json.rst  ml.rst  network.rst  scientific.rst  scrape.rst  serialization.rst  speed.rst  web.rst  xml.rst
docs/shipping/: freezing.rst  packaging.rst  publishing.rst
docs/starting/: installation.rst  which-python.rst
docs/starting/install/: linux.rst  osx.rst  win.rst
docs/starting/install3/: linux.rst  osx.rst  win.rst
docs/writing/: documentation.rst  gotchas.rst  license.rst  logging.rst  reading.rst  structure.rst  style.rst  tests.rst
