[project]
name = "python-guide-cn"
version = "0.0.0"
description = "Chinese translation of The Hitchhiker's Guide to Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=7.4,<8",
    "sphinx-sitemap>=2.9,<3",
    "sphinxcontrib-websupport>=2,<3",
]

[tool.uv]
package = false
